jupyterhub/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jupyterhub
  namespace: jupyterhub
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: luban-gateway
    namespace: gateway
    sectionName: luban-local
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: luban-gateway
    namespace: gateway
    sectionName: luban-public
  hostnames:
  - jupyterhub.luban.k8s.orb.local
  - jupyterhub.luban.metasync.cc
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: proxy-public
      port: 80
